# Robotics

./: .gitignore  CMakeLists.txt  file  manifest.xml  subset.bag
irsensors/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
irsensors/msg/: floatarray.msg
irsensors/src/: IrControl.cpp  IrControl.cpp~  IrReadings.cpp  Median.cpp  Median.h
mapping/: CMakeLists.txt  error.out  mainpage.dox  manifest.xml
mapping/include/: NavMap.h
mapping/msg/: movement_state.msg  object_detected_info.msg
mapping/src/: ImageConverter.cpp  ImageConverter.h  Mapper.cpp  Mapper.h  NavMap.cpp  NavMap.h  PlaneDetector.cpp  PlaneDetector.h  PlaneDetector_Subsample.cpp  PlaneDetector_Subsample.h  PlaneDetector_stash_for_photoshoot.cpp  main.cpp  (+1 more)
motors/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml
motors/src/: Coord.cpp  (+9 more)
movement/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  wtf.txt
msg/: polarcoord.msg~
navigation/: CMakeLists.txt  manifest.xml
src/: Coord.cpp  FakeMotorsTest.cpp  FakeMotorsTest.cpp~  MovementControl.cpp  MovementControl.h
tutorialROSOpenCV/: CMakeLists.txt  manifest.xml
tutorialROSOpenCV/Object_Images/Object Images/Avocado/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Corn/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Lemon/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Orange/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Peas/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Pepper/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Tiger/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Watermelon/: Thumbs.db
tutorialROSOpenCV/Object_Images/Object Images/Zebra/: Thumbs.db
tutorialROSOpenCV/src/: ColorDetector.cpp  ColorDetector.h  ContourChecker.cpp  ContourChecker.h  DepthReader.cpp  DepthReader.h  Enumerations.h  ImageConverter.cpp  ImageConverter.h  NavMap.cpp  NavMap.h  ObjectDetector.cpp  ObjectDetector.h  RobotEye.cpp  ShapeChecker.cpp  ShapeChecker.h  ShapeCheckerContourOUTDATED.cpp  SurfChecker.cpp  SurfChecker.h  SurfCheckerSimpleContours.h  basic_threshold.cpp  bounding_rects.cpp  contours.cpp  contours_video.cpp  main.cpp  matcher_simple.cpp  matcher_simple_video.cpp  meta.cpp  plane_detection_no_lib.cpp  plane_detection_pcl.cpp  plane_detection_rui.cpp  plane_detection_scratch.cpp  test.cpp  watershed_segmentation.cpp
tutorialROSOpenCV/src/tutorialROSOpenCV/msg/: _evidence.py
vision/: CMakeLists.txt  manifest.xml
(+84 files in other folders)
